[package]
name = "truck-geotrait"
version = "0.4.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "Defines geometric traits for truck"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
derive = ["truck-derivers"]
polynomial = []

[dependencies]
truck-base = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
truck-derivers = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
