[package]
name = "truck-integral"
version = "0.1.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
truck-geometry = {path = "../truck-geometry"}
truck-topology = {path = "../truck-topology"}
