[package]
name = "truck-io"
version = "0.1.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obj = "0.9.1"
truck-geometry = {path = "../truck-geometry"}
truck-topology = {path = "../truck-topology"}
truck-polymesh = {path = "../truck-polymesh"}
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
