[package]
name = "truck-js"
version = "0.2.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "Javascript wrapper for truck"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = "0.99.18"
serde_json = "1.0.125"

truck-meshalgo = { version = "0.3.0", path = "../truck-meshalgo" }
truck-modeling = { version = "0.5.0", path = "../truck-modeling" }
truck-shapeops = { version = "0.3.0", path = "../truck-shapeops" }
truck-stepio = { version = "0.2.0", path = "../truck-stepio" }
truck-topology = { version = "0.5.0", path = "../truck-topology" }

wasm-bindgen = "0.2.93"
js-sys = "0.3.70"
gloo = "0.11.0"
