[package]
name = "truck-js"
version = "0.2.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "Javascript wrapper for truck"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = { workspace = true }
serde_json = { workspace = true }

truck-meshalgo = { workspace = true }
truck-modeling = { workspace = true }
truck-shapeops = { workspace = true }
truck-stepio = { workspace = true }
truck-topology = { workspace = true }

wasm-bindgen = "0.2.108"
js-sys = "0.3.85"
gloo = "0.11.0"
