[package]
name = "truck-meshalgo"
version = "0.4.0"
edition = "2021"
description = "Mesh algorigthms, include tessellations of the shape."
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics", "mesh"]
categories = ["graphics"]

[features]
analyzers = []
filters = []
tessellation = ["spade", "filters"]
vtk = ["vtkio"]
default = ["analyzers", "filters", "tessellation", "vtk"]

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
rustc-hash = "2.1.1"
array-macro = "2.1.8"
itertools = "0.14.0"
spade = { version = "2.13.1", optional = true }
truck-base = { version = "0.5.0", path = "../truck-base" }
truck-geometry = { version = "0.5.0", path = "../truck-geometry" }
truck-polymesh = { version = "0.6.0", path = "../truck-polymesh" }
truck-topology = { version = "0.6.0", path = "../truck-topology" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
vtkio = { version = "0.6.3", optional = true }

[dev-dependencies]
rand = "0.9.1"
serde_json = "1.0.140"
proptest = "1.6.0"
truck-modeling = { version = "0.6.0", path = "../truck-modeling" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
