[package]
name = "truck-meshalgo"
version = "0.4.0"
edition = "2021"
description = "Mesh algorigthms, include tessellations of the shape."
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics", "mesh"]
categories = ["graphics"]

[features]
analyzers = []
filters = []
tessellation = ["spade", "filters"]
vtk = ["vtkio"]
default = ["analyzers", "filters", "tessellation", "vtk"]

[dependencies]
array-macro = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
spade = { version = "2.15.0", optional = true }
truck-base = { workspace = true }
truck-geometry = { workspace = true }
truck-polymesh = { workspace = true }
truck-topology = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }
vtkio = { version = "0.6.3", optional = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
truck-modeling = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { workspace = true }
