[package]
name = "truck-modeling"
version = "0.5.1"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "integrated modeling algorithms by geometry and topology"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[dependencies]
derive_more = "0.99.17"
rustc-hash = "1.1.0"
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
truck-base = { version = "0.4.0", path = "../truck-base" }
truck-geotrait = { version = "0.3.0", path = "../truck-geotrait", features = ["derive"] }
truck-geometry = { version = "0.4.0", path = "../truck-geometry" }
truck-polymesh = { version = "0.5.0", path = "../truck-polymesh" }
truck-topology = { version = "0.5.0", path = "../truck-topology" }

[dev-dependencies]
proptest = "1.4.0"
serde_json = "1.0.108"
