[package]
name = "truck-modeling"
version = "0.6.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "integrated modeling algorithms by geometry and topology"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
itertools = "0.14.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
truck-base = { version = "0.5.0", path = "../truck-base" }
truck-geotrait = { version = "0.4.0", path = "../truck-geotrait", features = ["derive"] }
truck-geometry = { version = "0.5.0", path = "../truck-geometry" }
truck-polymesh = { version = "0.6.0", path = "../truck-polymesh" }
truck-topology = { version = "0.6.0", path = "../truck-topology" }

[dev-dependencies]
proptest = "1.9.0"
serde_json = "1.0.148"
