[package]
name = "truck-modeling"
version = "0.6.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "integrated modeling algorithms by geometry and topology"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[dependencies]
derive_more = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
truck-base = { workspace = true }
truck-geotrait = { workspace = true, features = ["derive"] }
truck-geometry = { workspace = true }
truck-polymesh = { workspace = true }
truck-topology = { workspace = true }
truck-shapeops = { workspace = true, optional = true }

[features]
default = []
fillet = ["truck-shapeops"]

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
