[package]
name = "truck-platform"
version = "0.6.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "graphic utility library based on wgpu"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
bytemuck = { workspace = true }
derive_more = { workspace = true }
futures-intrusive = "0.5.0"
rustc-hash = { workspace = true }
truck-base = { workspace = true }
wgpu = "27.0.1"
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
image = { workspace = true }
log = "0.4.29"
naga = { version = "27.0.3", features = ["wgsl-in"] }
pollster = { workspace = true }
rayon = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Location"] }
