[package]
name = "truck-polymesh"
version = "0.6.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "defines polygon data structure and some algorithms handling mesh, including meshing the shapes"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics", "mesh", "obj", "stl"]
categories = ["graphics"]
exclude = ["examples/**/*.obj"]

[dependencies]
array-macro = "2.1.8"
bytemuck = { version = "1.18.0", features = ["derive"] }
itertools = "0.13.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
truck-base = { version = "0.5.0", path = "../truck-base" }
truck-geotrait = { version = "0.4.0", path = "../truck-geotrait" }
thiserror = "1.0.64"
