[package]
name = "truck-polymesh"
version = "0.6.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "defines polygon data structure and some algorithms handling mesh, including meshing the shapes"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics", "mesh", "obj", "stl"]
categories = ["graphics"]
exclude = ["examples/**/*.obj"]

[dependencies]
array-macro = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
truck-base = { workspace = true }
truck-geotrait = { workspace = true }
thiserror = { workspace = true }
