[package]
name = "truck-polymesh"
version = "0.6.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "defines polygon data structure and some algorithms handling mesh, including meshing the shapes"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics", "mesh", "obj", "stl"]
categories = ["graphics"]
exclude = ["examples/**/*.obj"]

[dependencies]
array-macro = "2.1.8"
bytemuck = { version = "1.25.0", features = ["derive"] }
itertools = "0.14.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
truck-base = { version = "0.5.0", path = "../truck-base" }
truck-geotrait = { version = "0.4.0", path = "../truck-geotrait" }
thiserror = "2.0.18"
